--- a/monitor.html
+++ b/monitor.html
@@ -47,19 +47,23 @@
                 <p id="churn-period-info" class="text-xs sm:text-sm font-medium text-gray-500 mt-1">
                 </p>
             </div>
-            <div class="flex flex-wrap items-center gap-2 mt-2 sm:mt-0">
-                <button id="view-as-admin-btn" class="bg-purple-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-purple-700 transition shadow-sm hidden">
-                    View as Admin
+            
+            <div class="flex items-center gap-2 mt-2 sm:mt-0 w-full sm:w-auto">
+                <button id="view-as-admin-btn" class="w-[20%] sm:w-auto flex justify-center items-center px-0 py-1.5 sm:py-2 sm:px-4 rounded-md shadow-sm transition bg-gray-200 text-gray-500 hover:bg-gray-300 sm:bg-purple-600 sm:text-white sm:hover:bg-purple-700 font-semibold text-xs sm:text-sm hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+                    </svg>
+                    <span class="hidden sm:inline">View as Admin</span>
                 </button>
 
-                <button id="copy-agent-link-btn" class="bg-green-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-green-700 transition shadow-sm flex items-center hidden">
+                <button id="copy-agent-link-btn" class="flex-1 sm:flex-initial flex items-center justify-center bg-green-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-green-700 transition shadow-sm hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
                     </svg>
                     Copy Link
                 </button>
 
-                <button id="refresh-btn" class="refresh-button py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 flex items-center">
+                <button id="refresh-btn" class="flex-1 sm:flex-initial refresh-button py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 flex items-center justify-center">
                     <svg id="refresh-icon" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5M20 20v-5h-5M20 4h-5l-1-1h-4l-1 1H5M4 20h5l1 1h4l1-1h5" />
                     </svg>
@@ -72,28 +76,30 @@
             </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6 mb-6">
-            <div id="reactivated-card" class="stat-card hidden">
+        <div class="grid grid-cols-2 gap-3 sm:gap-6 mb-6">
+            
+            <div id="reactivated-card" class="stat-card hidden p-3 sm:p-6">
                 <div class="flex items-center">
-                    <div class="stat-icon bg-green-100 text-green-600">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
+                    <div class="stat-icon bg-green-100 text-green-600 w-10 h-10 sm:w-12 sm:h-12 flex-shrink-0">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-6 sm:w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
                     </div>
-                    <h2 class="text-lg font-semibold text-gray-700 ml-3">Users Reactivated</h2>
+                    <h2 class="text-xs sm:text-lg font-semibold text-gray-700 ml-2 sm:ml-3 leading-tight">Users Reactivated</h2>
                 </div>
-                <p id="reactivated-count" class="text-3xl font-bold text-gray-800 mt-2">--/--</p>
+                <p id="reactivated-count" class="text-xl sm:text-3xl font-bold text-gray-800 mt-2">--/--</p>
                 <div class="progress-bar-container">
                     <div id="reactivated-progress" class="progress-bar"></div>
                 </div>
             </div>
-            <div id="time-remaining-card" class="stat-card hidden">
+
+            <div id="time-remaining-card" class="stat-card hidden p-3 sm:p-6">
                 <div class="flex items-center">
-                    <div class="stat-icon bg-blue-100 text-blue-600">
-                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                    <div class="stat-icon bg-blue-100 text-blue-600 w-10 h-10 sm:w-12 sm:h-12 flex-shrink-0">
+                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-6 sm:w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                     </div>
-                    <h2 class="text-lg font-semibold text-gray-700 ml-3">Time Remaining</h2>
+                    <h2 class="text-xs sm:text-lg font-semibold text-gray-700 ml-2 sm:ml-3 leading-tight">Time Remaining</h2>
                 </div>
-                <p id="time-remaining" class="text-3xl font-bold text-gray-700 mt-2">--</p>
-                 <p class="text-sm text-gray-400 mt-1">until due date</p>
+                <p id="time-remaining" class="text-xl sm:text-3xl font-bold text-gray-700 mt-2">--</p>
+                 <p class="text-xs sm:text-sm text-gray-400 mt-1">until due date</p>
             </div>
         </div>
 
@@ -109,7 +115,7 @@
         </div>
 
         <div id="monitor-mobile-list" class="md:hidden space-y-3">
-            <div class="text-center text-gray-500 py-8">Loading...</div>
+             <div class="text-center text-gray-500 py-8">Loading...</div>
         </div>
 
         <div class="bg-white shadow-lg rounded-lg overflow-hidden hidden md:block">
