--- a/monitor.html
+++ b/monitor.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -83,7 +82,7 @@
                     <div class="stat-icon bg-green-100 text-green-600 w-10 h-10 sm:w-12 sm:h-12 flex-shrink-0">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-6 sm:w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
                     </div>
-                    <h2 class="text-xs sm:text-lg font-semibold text-gray-700 ml-2 sm:ml-3 leading-tight">Users Reactivated</h2>
+                    <h2 id="reactivated-card-title" class="text-xs sm:text-lg font-semibold text-gray-700 ml-2 sm:ml-3 leading-tight">Users Reactivated</h2>
                 </div>
                 <p id="reactivated-count" class="text-xl sm:text-3xl font-bold text-gray-800 mt-2">--/--</p>
                 <div class="progress-bar-container">
@@ -114,10 +113,16 @@
             </div>
             
             <div class="flex justify-center mt-3">
-                <div class="flex gap-2 w-[95%] sm:w-[70%]">
-                    <button id="filter-btn-all" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-md bg-blue-600 text-white border border-transparent tracking-wide hover:bg-blue-700">All</button>
-                    <button id="filter-btn-ae" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">AE/Agent</button>
-                    <button id="filter-btn-merchant" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">Merchant</button>
+                <div class="flex gap-2 w-[98%] sm:w-[85%] lg:w-[70%]">
+                    <button id="filter-btn-all" class="flex-1 px-2 py-1.5 sm:px-4 sm:py-2 text-[10px] sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-md bg-blue-600 text-white border border-transparent tracking-wide hover:bg-blue-700">All</button>
+                    <button id="filter-btn-ae" class="flex-1 px-2 py-1.5 sm:px-4 sm:py-2 text-[10px] sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">AE/Agent</button>
+                    <button id="filter-btn-merchant" class="flex-1 px-2 py-1.5 sm:px-4 sm:py-2 text-[10px] sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">Merchant</button>
+                    <button id="filter-btn-activity" class="flex-1 px-2 py-1.5 sm:px-4 sm:py-2 text-[10px] sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide flex items-center justify-center gap-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 sm:h-4 sm:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                        </svg>
+                        AE Activity
+                    </button>
                 </div>
             </div>
         </div>
