--- a/monitor.html
+++ b/monitor.html
@@ -56,6 +56,10 @@
                     <span class="hidden sm:inline">View as Admin</span>
                 </button>
 
+                <button id="export-monitor-csv-btn" class="hidden text-gray-400 hover:text-gray-600 text-xs sm:text-sm font-medium px-2 sm:px-3 py-2 transition-colors mr-1 underline">
+                    Export CSV
+                </button>
+
                 <button id="copy-agent-link-btn" class="flex-1 sm:flex-initial flex items-center justify-center bg-green-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-green-700 transition shadow-sm hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
